--- a/src/Unlimint/MyJetWallet.Unlimint.csproj
+++ b/src/Unlimint/MyJetWallet.Unlimint.csproj
@@ -18,4 +18,8 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Converters\CreditCardStringConverter.cs" />
+    </ItemGroup>
+
 </Project>
