--- a/src/Unlimint/MyJetWallet.Unlimint.csproj
+++ b/src/Unlimint/MyJetWallet.Unlimint.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <Compile Remove="Converters\CreditCardStringConverter.cs" />
+      <Compile Remove="Models\Payments\CardInfoResponse.cs" />
     </ItemGroup>
 
 </Project>
