--- a/src/MyJetWallet.Unlimint/MyJetWallet.Unlimint.csproj
+++ b/src/MyJetWallet.Unlimint/MyJetWallet.Unlimint.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
         <PackageReference Include="Destructurama.Attributed" Version="3.0.0" />
+        <PackageReference Include="MyJetWallet.Sdk.NoSql" Version="2.3.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
